style/style.css
 /* RESET & GLOBALS */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
}
:root {
  --color-background: #0b131d;
  --color-surface: #1E1E1E;
  --color-text-primary: #E0E0E0;
  --color-text-secondary: #A0A0A0;
  --color-accent-electric-blue: #286fe9;
  --color-accent-neon-green: #37ff14c9;
  --color-button-bg: var(--color-accent-electric-blue);
  --color-button-hover-bg: #1C5ED6;
  --color-link: var(--color-accent-electric-blue);
  --color-link-hover: #1C5ED6;
  --color-border: #333333;
}

body {
  color: white;
  background-color: var(--color-background);
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
}

/* NAVIGATION */
.nav{
  margin-top: 20px;
  width: 100%;
  display: flex;
  padding: 0px 4em;
  justify-content: space-between;
  align-items: center;
  position: relative;
}

.nav h3 {
  color: var(--color-text-primary);
  font-family: "Pacifico", cursive;
  font-weight: 400;
  font-style: normal;
  font-size: 30px;
}
.nav img {
  height: 50px;
}

nav ul {
  display: flex;
  gap: 4em;
}

nav ul li {
  list-style: none;
}

nav ul li a {
  text-decoration: none;
  color: var(--color-text-primary);
  padding: 20px;
  transition: 500ms;
  /* background-color: #18222e; */
  position: relative;
  
}

nav ul li a:hover {
  color: var(--color-accent-electric-bluee);
}
nav ul li a::after{
    content: "";
    width: 0%;
    height: 2px;
    background-color: var(--color-accent-electric-blue);
    display: inline-block;
    position: absolute;
    bottom: 5px;
    left: 0;
    transition: 500ms;
    border-radius: 5px;
}
nav ul li a:hover::after{
    width: 100%;
    background-color: var(--color-accent-electric-blue);
}
.mobile-nav{
  display: none;
}


/* HEADER */
header {
  display: flex;
  justify-content: space-around;
  align-items: center;
  align-content: center;
  /* background: linear-gradient(220deg,var(--color-background) 90%,var(--color-button-hover-bg)40%); */
  height: 90vh;
  flex-wrap: nowrap;
  border-bottom: 2px solid var(--color-border);
}

.header-content {
  display: flex;
  flex-direction: column;
  align-items: start;
  gap: 30px;
}

.header-h h1 {
  font-size: 5em;
  color: var(--color-accent-electric-blue);
}

.header-h h3 {
  font-size: 3em;
  color: var(--color-text-primary);
}

.header-content .contact-bnt {
  font-weight: bold;
  background-color: var(--color-button-bg);
  padding: 15px 40px;
  border: 0px;
  border-radius: 10px;
  box-shadow: 0px 0px 5px var(--color-border);
  transition-duration: 500ms;
}

.contact-bnt:hover {
  background-color: var(--color-button-hover-bg);
  transform: translateY(-2px) scale(1.01);
  /* box-shadow: 0px 0px 5px var(--color-button-hover-bg); */
}

header img {
  /* position: relative; */
  background-color: #18375e;
  border-radius: 50%;
  height: 25em;
  margin: 0px 0px;
  box-shadow: 3px -3px 10px var(--color-accent-electric-blue);
  z-index: 2;
}
/* HERO SECTION */
.hero {
  display: flex;
  flex-direction: column;
  align-content: center;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 50px;
  gap: 30px;
  border-bottom: 2px solid var(--color-border);
  color: var(--color-text-primary);
}

.hero h2 {
  font-size: 2em;
}

.hero p {
  color: rgb(185, 184, 184);
  width: 50%;
}

.hero span {
  color: var(--color-accent-electric-blue);
  font-weight: bold;
}

/* SKILLS */
.skills .logo {
  display: flex;
  gap: 10rem;
}

.logo1 {
  border-radius: 10px;
  border: 2px solid var(--color-border);
  background-color: rgb(27, 27, 27);
  transition: 500ms;
}
.logo1:hover {
  transform: scale(1.2);
}
.skills .logo .logo1 img {
  height: 150px;
  padding: 10px;
}

/* PROJECTS */
.projects {
  display: flex;
  gap: 30px;
}

.pro {
  display: flex;
  flex-direction: column;
  gap: 40px;
  border-radius: 10px;
  padding: 40px 10px;
  border: 2px solid var(--color-border);
  background-color: rgba(27, 27, 27, 0.342);
  text-align: start;
  align-items: center;
  transition: 500ms;
}
.pro:hover{
  transform: scale(1.1);
}
.pro a {
  text-decoration: none;
  color: var(--color-accent-electric-blue);
}

.pro a:hover {
  color: var(--color-link-hover);
  border-bottom: 1px solid var(--color-link-hover);
}

.pro p {
  text-align: center;
}

/* CONTACT */
.contact-container {
  height: auto;
  display: flex;
  flex-direction: column;
  align-content: center;
  align-items: center;
  text-align: center;
  padding: 50px 0px;
  gap: 20px;
  padding: 3em;
  width: 100%;
}

.contact-container form {
  display: grid;
  gap: 20px;
  grid-template-columns: 1fr;
}

.contact-container form input {
  color: var(--color-text-primary);
  padding: 10px;
  border: 1px solid var(--color-border);
  background-color: var(--color-background);
  border-radius: 5px;
  transition: 500ms;
  height: 50px;
}
input:-webkit-autofill{
    -webkit-text-fill-background: rgb(255, 255, 255) !important;
    box-shadow: 0 0 0px 1000px var(--color-background) inset !important; 
}

.message {
  background-color: var(--color-background);
  grid-column: 1/3;
  border-radius: 5px;
  height: 100px;
  resize: vertical;
  border: 1px solid var(--color-border);
  color: var(--color-text-primary);
  padding: 10px;
  transition: 500ms;
}


/* FOCUS STYLES */
.contact-container form input:focus,
textarea:focus {
  border: 1px solid var(--color-link-hover);
  outline: none;
  background-color: #142b47a6;
}

/* FOOTER */
.footer {
  display: flex;
}

/* BUTTON (shared) */
.bnt {
  font-weight: bold;
  background-color: var(--color-button-bg);
  padding: 15px 40px;
  border: 0px;
  border-radius: 10px;
  box-shadow: 0px 0px 5px var(--color-border);
  transition-duration: 500ms;
  width: 100%;
  text-align: center;
  
}

.bnt:hover {
  background-color: var(--color-link-hover);
  transform: translateY(-2px) scale(1.01);
}

/* RESPONSIVE STYLES */
@media (max-width: 980px) {
  nav {
    display: none;
    
  }
  .mobile-nav{
    display: none;
    flex-direction: column;
    align-items: end;
    height: 100%;
    position: absolute;
    right: 0;
    top: 0;
    width: 50%;
    background-color: var(--color-accent-electric-blue);
    transform: translateX(50vw);
    transition-duration: .5s;
    color: black;
    z-index: 100;
    border-radius: 20px 0px 0px 20px ;
    justify-content: center;
    align-items: center;
  }
  .active{
  transform: translateX(0);
  transition-duration: 1s;
  width: 80%;
 }
  .mobile-nav ul{
    flex-direction: column;
    position: inherit;
    left: 0;
    align-items: start;
    height: 100%;
    gap: 3em;
    margin-top: 30px;
 }
 .mobile-nav ul li{
  padding: 10px 20px;
  font-size: 20px;
  /* font-weight: bold; */
}
.menu-x{
  background-color: rgba(255, 255, 255, 0.715);
  margin-top: 20px;
  margin-left: 20px;
  padding: 10px;
  border-radius: 10px;
  height: 50px;
}

 

  header {
    height: 100vh;
    flex-direction: column;
    justify-content: space-around;
    text-align: center;
    gap: 3em;
    margin-top: 2em;
  }

  .header-content {
    align-items: center;
    gap: 20px;
  }

  .header-h h1 {
    font-size: 3.5em;
    color: var(--color-accent-electric-blue);
  }

  .header-h h3 {
    font-size: 2em;
  }

  .nav {
    justify-content: space-between;
    padding: 10px 20px;
    align-items: center;
  }

  .nav svg,
  .nav-logo {
    height: 50px;
  }

  header img {
    height: 23em;
    margin-bottom: 50px;
  }

  .hero p {
    width: 80%;
  }

  .skills .logo {
    flex-direction: column;
    gap: 4em;
  }

  .projects {
    flex-direction: column;
    gap: 4em;
  }

  .projects-container {
    height: auto;
  }

  .footer {
    flex-direction: column;
  }

  .contact-container form {
    gap: 20px;
  }

  .message {
    grid-column: 1/2;
  }
}

@media (min-width: 980px) {
  .nav svg {
    height: 50px;
    display: none;
  }
  .phone{
    grid-column: 1/3;
  }
}
.icon{
    height: 40px;
    
}
.links-container{
    display: flex;
    flex-direction: column;
    gap: 20px;
    width: 100%;
    padding: 50px 0px;
    gap: 20px;
    padding: 3em;
    width: 100%;
}
.links a{
    text-decoration: none;
    color: var(--color-text-primary);
    display: flex;
    align-items: center;
    gap: 10px;
}
@media (max-width: 450px){

  header img {
    height: auto;
    width: 70%;
    margin-bottom: 50px;

  }

}

